update deployment files to use amd64 image, previous tag was pointing to a image that did not have PAPI's powercap support installed

--- a/eval/kubernetes/g3.yaml
+++ b/eval/kubernetes/g3.yaml
@@ -19,7 +19,7 @@ spec:
         type: g3
       containers:
       - name: ecs
-        image: serodioj/energy-consumption-service:latest
+        image: serodioj/energy-consumption-service:amd64
         ports:
         - containerPort: 8000
           hostPort: 8000
